force-app/main/default/objects/Scoring_Weight__mdt/Scoring_Weight__mdt.object-meta.xml
<CustomObject>
    <label>Scoring Weight</label>
    <pluralLabel>Scoring Weights</pluralLabel>
</CustomObject>