force-app/main/default/objects/Scoring_Weight__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>