force-app/main/default/objects/Scoring_Weight__mdt/fields/Max_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Max_Contribution__c</fullName>
    <label>Max Contribution</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <required>true</required>
</CustomField>