force-app/main/default/objects/Scoring_Weight__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <required>true</required>
</CustomField>